# dataspace-cli

./: Cargo.toml  README.md
examples/: get_asset_data.py
src/: backup.rs  config.rs  lib.rs  main.rs  urls.rs
src/consumer/: mod.rs
src/provider/: mod.rs
