[package]
name = "dataspace_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.98"
serde_yaml = "0.9.34"
clap = { version = "4.5.40", features = ["derive"] }
